k8s/postgres-db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-db-storage
          persistentVolumeClaim:
            claimName: database-pvc
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-db-storage
              mountPath: /var/lib/postgresql/data/
              subPath: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: jpostgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
