k8s/simple-web-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web-be-app
  template:
    metadata:
      labels:
        component: web-be-app
    spec:
      containers:
        - name: simple-web-app
          image: pash04/simple-web-app
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: simple-web-app-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web-be-app
  ports:
    - port: 80
      targetPort: 80
